// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Charts/PercentageCircle No Data 1`] = `
<div>
  <div
    aria-busy="true"
    aria-live="polite"
    class="MuiBox-root css-2esbmj"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 makeStyles-title css-1ezega9-MuiTypography-root"
    >
      CPU usage
    </p>
    <div
      class="makeStyles-loaderContainer MuiBox-root css-11ra0t9"
    >
      <span
        class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-wdedfu-MuiCircularProgress-root"
        role="progressbar"
        style="width: 40px; height: 40px;"
        title="Loading data for CPU usage"
      >
        <svg
          class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Charts/PercentageCircle Percent 50 1`] = `
<div>
  <div
    aria-busy="false"
    aria-live="polite"
    class="MuiBox-root css-2esbmj"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 makeStyles-title css-1ezega9-MuiTypography-root"
    >
      Pods
    </p>
    <div
      class="recharts-wrapper makeStyles-chart"
      style="position: relative; cursor: default; width: 160px; height: 160px;"
    >
      <svg
        class="recharts-surface"
        cx="100"
        cy="100"
        height="160"
        version="1.1"
        viewBox="0 0 160 160"
        width="160"
      >
        <title />
        <desc />
        <defs>
          <clippath
            id="recharts13-clip"
          >
            <rect
              height="150"
              width="150"
              x="5"
              y="5"
            />
          </clippath>
        </defs>
        <g
          class="recharts-layer recharts-pie"
        >
          <g
            class="recharts-layer"
          >
            <g
              class="recharts-layer recharts-pie-sector"
            />
            <g
              class="recharts-layer recharts-pie-sector"
            />
            <g
              class="recharts-layer recharts-pie-sector"
            />
          </g>
          <text
            class="recharts-text recharts-label"
            offset="5"
            style="font-size: 24px; fill: #000;"
            text-anchor="middle"
            x="85"
            y="85"
          >
            <tspan
              dy="0.355em"
              x="85"
            >
              50.0 %
            </tspan>
          </text>
        </g>
      </svg>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 makeStyles-legend css-1ezega9-MuiTypography-root"
    >
      5 / 10 Requested
    </p>
  </div>
</div>
`;

exports[`Storyshots Charts/PercentageCircle Percent 100 1`] = `
<div>
  <div
    aria-busy="false"
    aria-live="polite"
    class="MuiBox-root css-2esbmj"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 makeStyles-title css-1ezega9-MuiTypography-root"
    >
      Pods
    </p>
    <div
      class="recharts-wrapper makeStyles-chart"
      style="position: relative; cursor: default; width: 160px; height: 160px;"
    >
      <svg
        class="recharts-surface"
        cx="100"
        cy="100"
        height="160"
        version="1.1"
        viewBox="0 0 160 160"
        width="160"
      >
        <title />
        <desc />
        <defs>
          <clippath
            id="recharts11-clip"
          >
            <rect
              height="150"
              width="150"
              x="5"
              y="5"
            />
          </clippath>
        </defs>
        <g
          class="recharts-layer recharts-pie"
        >
          <g
            class="recharts-layer"
          >
            <g
              class="recharts-layer recharts-pie-sector"
            />
            <g
              class="recharts-layer recharts-pie-sector"
            />
            <g
              class="recharts-layer recharts-pie-sector"
            />
          </g>
          <text
            class="recharts-text recharts-label"
            offset="5"
            style="font-size: 24px; fill: #000;"
            text-anchor="middle"
            x="85"
            y="85"
          >
            <tspan
              dy="0.355em"
              x="85"
            >
              100.0 %
            </tspan>
          </text>
        </g>
      </svg>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 makeStyles-legend css-1ezega9-MuiTypography-root"
    >
      9 / 9 Requested
    </p>
  </div>
</div>
`;
